--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
-REACT_APP_FEATURE_FLAG=test2
-REACT_APP_FEATURE_USERID=test2user
+# used by unleash-proxy.js
 unleashApiUrl='http://unleash.herokuapp.com/api/'
 appName='my-app-name'
 instanceId='my-unique-instance-id'
+# used by unleash-js.js
+REACT_APP_UNLEASH_PROXY_HOST='localhost'
+REACT_APP_UNLEASH_PROXY_PORT='3004'
